--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,32 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "manifest_version": 2,
+  "name": "foxnotes",
+  "version": "1.0",
+
+  "description": "synchronize notes accross all your websites and firefox devices",
+
+  "icons": {
+    "48": "icons/foxnotes-48.png"
+  },
+
+
+
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "matches": ["*://*/*"],
+      "js": ["foxnotes.js"]
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "browser_specific_settings": {
+      "gecko": {
+        "id": "germ13@schemer.dev"
+      }
+    },
+    "sidebar_action": {
+      "default_icon": "icons/foxnotes-sidebar-48.png",
+      "default_title" : "foxnotes",
+      "default_panel": "index.html"
+    },
+
+    "permissions": ["storage", "tabs"]
 }
